--- a/index.html
+++ b/index.html
@@ -42,7 +42,187 @@
         </div>
     </header>
     <div class="wrap-2">
-
+        <div class="container">
+            <div class="row">
+                <div class="col-6 col-t-8 col-m-12">
+                    <h2>NIKE <br> SHOES</h2>
+                    <p>SIGN UP NOW AND GET 50% OFF</p>
+                    <button class="btn">SHOP NOW</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <main class="wrap-3">
+        <div class="container">
+            <div class="grid1">
+                <div class="col">
+                    <span class="fa fa-plane"></span>
+                    <h3>FREE SHIPPING</h3>
+                    <p>Lorem Ipsum is simply dummy text of the printing and type setting industry. </p>
+                    <a href="">Click here</a>
+                </div>
+                <div class="col">
+                    <span class="fa fa-plane"></span>
+                    <h3>FREE SHIPPING</h3>
+                    <p>Lorem Ipsum is simply dummy text of the printing and type setting industry.  </p>
+                    <a href="">Click here</a>
+                </div>
+                <div class="col">
+                    <span class="fa fa-plane"></span>
+                    <h3>FREE SHIPPING</h3>
+                    <p>Lorem Ipsum is simply dummy text of the printing and type setting industry. </p>
+                    <a href="">Click here</a>
+                </div>
+                <div class="col">
+                    <span class="fa fa-plane"></span>
+                    <h3>FREE SHIPPING</h3>
+                    <p>Lorem Ipsum is simply dummy text of the printing and type setting industry. </p>
+                    <a href="">Click here</a>
+                </div>
+            </div>
+            <div class="grid2">
+                <div class="col">
+                    <div class="grid place-item-center h100">
+                        <div>
+                            <p class="offer">OFFER OF THE MONTH</p>
+                            <h2>Phantom Vision Elite Dynamic</h2>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi nisi voluptatum autem tempora laborum aliquid delectus pariatur recusandae perferendis explicabo illo vel eaque quisquam numquam ab, animi totam? Expedita, temporibus.Phantom Vision Elite Dynamic</p>
+                            <p class="price"> $500 <del>$1000</del> </p>
+                            <button class="btn">SHOP NOW</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <img src="img/offer.webp" alt="offer of the day" width="750" height="751" loading="lazy">
+                </div>
+            </div>
+            <div class="grid3">
+                <div class="col">
+                    <img src="img/nike-shoe.webp" alt="nike show" width="327" height="196" loading="lazy">
+                    <h3>NIKE SHOES</h3>
+                    <p>$100 <del>$200</del></p>
+                    <div class="hover"></div>
+                </div>
+                <div class="col">
+                    <img src="img/nike-shoe.webp" alt="nike show" width="327" height="196" loading="lazy">
+                    <h3>NIKE SHOES</h3>
+                    <p>$100 <del>$200</del></p>
+                </div>
+                <div class="col">
+                    <img src="img/nike-shoe.webp" alt="nike show" width="327" height="196" loading="lazy">
+                    <h3>NIKE SHOES</h3>
+                    <p>$100 <del>$200</del></p>
+                </div>
+                <div class="col">
+                    <img src="img/nike-shoe.webp" alt="nike show" width="327" height="196" loading="lazy">
+                    <h3>NIKE SHOES</h3>
+                    <p>$100 <del>$200</del></p>
+                </div>
+                <div class="col">
+                    <img src="img/nike-shoe.webp" alt="nike show" width="327" height="196" loading="lazy">
+                    <h3>NIKE SHOES</h3>
+                    <p>$100 <del>$200</del></p>
+                </div>
+                <div class="col">
+                    <img src="img/nike-shoe.webp" alt="nike show" width="327" height="196" loading="lazy">
+                    <h3>NIKE SHOES</h3>
+                    <p>$100 <del>$200</del></p>
+                </div>
+                <div class="col col-2x">
+                    <img src="img/nike-women.webp" alt="nike show" width="750" height="376" loading="lazy">
+                    <div class="caption">
+                        <h3>Run, <br> Eat, Sleep</h3>
+                    </div>
+                </div>
+                <div class="col">
+                    <img src="img/nike-shoe.webp" alt="nike show" width="327" height="196" loading="lazy">
+                    <h3>NIKE SHOES</h3>
+                    <p>$100 <del>$200</del></p>
+                </div>
+                <div class="col">
+                    <img src="img/nike-shoe.webp" alt="nike show" width="327" height="196" loading="lazy">
+                    <h3>NIKE SHOES</h3>
+                    <p>$100 <del>$200</del></p>
+                </div>
+                <div class="col">
+                    <img src="img/nike-shoe.webp" alt="nike show" width="327" height="196" loading="lazy">
+                    <h3>NIKE SHOES</h3>
+                    <p>$100 <del>$200</del></p>
+                </div>
+                <div class="col">
+                    <img src="img/nike-shoe.webp" alt="nike show" width="327" height="196" loading="lazy">
+                    <h3>NIKE SHOES</h3>
+                    <p>$100 <del>$200</del></p>
+                </div>
+            </div>
+            <div class="grid4">
+                <div class="col"><a href="">CLICK HERE</a></div>
+            </div>
+            <div class="grid5">
+                <div class="col"><img src="img/weight-lifting.webp" alt="weight lifting" width="374" height="365" loading="lazy"></div>
+                <div class="col"><img src="img/weight-lifting.webp" alt="weight lifting" width="374" height="365" loading="lazy"></div>
+                <div class="col"><img src="img/weight-lifting.webp" alt="weight lifting" width="374" height="365" loading="lazy"></div>
+                <div class="col"><img src="img/weight-lifting.webp" alt="weight lifting" width="374" height="365" loading="lazy"></div>
+                <div class="col"><img src="img/weight-lifting.webp" alt="weight lifting" width="374" height="365" loading="lazy"></div>
+                <div class="col"><img src="img/weight-lifting.webp" alt="weight lifting" width="374" height="365" loading="lazy"></div>
+                <div class="col"><img src="img/weight-lifting.webp" alt="weight lifting" width="374" height="365" loading="lazy"></div>
+                <div class="col"><img src="img/weight-lifting.webp" alt="weight lifting" width="374" height="365" loading="lazy"></div>
+            </div>
+            <div class="grid6">
+                <div class="col">
+                    <img src="img/harley.webp" alt="harley" width="130" height="98" loading="lazy">
+                </div>
+                <div class="col">
+                    <img src="img/harley.webp" alt="harley" width="130" height="98" loading="lazy">
+                </div>
+                <div class="col">
+                    <img src="img/harley.webp" alt="harley" width="130" height="98" loading="lazy">
+                </div>
+                <div class="col">
+                    <img src="img/harley.webp" alt="harley" width="130" height="98" loading="lazy">
+                </div>
+                <div class="col">
+                    <img src="img/harley.webp" alt="harley" width="130" height="98" loading="lazy">
+                </div>
+                <div class="col">
+                    <img src="img/harley.webp" alt="harley" width="130" height="98" loading="lazy">
+                </div>
+                <div class="col">
+                    <img src="img/harley.webp" alt="harley" width="130" height="98" loading="lazy">
+                </div>
+                <div class="col">
+                    <img src="img/harley.webp" alt="harley" width="130" height="98" loading="lazy">
+                </div>
+                <div class="col">
+                    <img src="img/harley.webp" alt="harley" width="130" height="98" loading="lazy">
+                </div>
+                <div class="col">
+                    <img src="img/harley.webp" alt="harley" width="130" height="98" loading="lazy">
+                </div>
+                <div class="col">
+                    <img src="img/harley.webp" alt="harley" width="130" height="98" loading="lazy">
+                </div>
+                <div class="col">
+                    <img src="img/harley.webp" alt="harley" width="130" height="98" loading="lazy">
+                </div>
+            </div>   
+        </div>
+    </main>
+    <div class="wrap-4">
+        <div class="container">
+            <div class="row">
+                <div class="col-8">
+                    <div class="row">
+                        <div class="col-4">4</div>
+                        <div class="col-4">4</div>
+                        <div class="col-4">4</div>
+                    </div>
+                </div>
+                <div class="col-4">
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maiores laboriosam optio magnam consectetur molestiae ad nam nobis corporis natus ipsa adipisci, earum numquam provident, illum nihil amet vero obcaecati dolore?</p>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
